# qa-pokemon-api-backend

./: .gitignore  Makefile  docker-compose.yml  index.html  pyproject.toml  pytest.ini
.github/workflows/: run-api-tests.yml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 304124ca85cd111d.json  f50c1050ca770b78.json
deploy/: seed.sql
export/: influxDbData.txt  prometheusData.txt
history/: history.json
src/: api_client.py  constants.py
src/api/: api_client.py  pokemon.py  pokemon_list.py  pokemons_list.py
src/assertions/: common.py  pokemon.py  pokemon_list.py  pokemons_list.py
src/assertions/utils/: allure.py
src/db/: db_client.py  pokemon.py
src/matchers/: pokemons_list.py
tests/: base_test.py  client.py  conftest.py  constants.py
tests/pokemon/: test_pokemon_list.py  test_pokemons_list.py
widgets/: duration.json  severity.json  summary.json
